--- a/birthday-answers.ipynb
+++ b/birthday-answers.ipynb
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1217,12 +1217,12 @@
     }
    ],
    "source": [
-    "9 < 10"
+    "9 <= 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1245,64 +1245,15 @@
     }
    ],
    "source": [
-    "10 > 10"
+    "TRUE & FALSE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "10 >= 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "10 <= 10"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
